# gitblame-ai

./: .gitignore  README.md  main.py  pyproject.toml  test_smells.py
gitblame_ai/: ai.py  git.py  main.py  roaster.py
