[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gitblame-ai"
version = "0.1.0"
description = "🔥 AI-powered code roaster — let git blame expose your teammates"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Aman", email = "you@biozap.link" }]
keywords = ["git", "ai", "cli", "developer-tools", "code-review", "humor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.10"
dependencies = ["anthropic>=0.25.0"]

[project.scripts]
gitblame-ai = "gitblame_ai.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/gitblame-ai"
Repository = "https://github.com/yourusername/gitblame-ai"
Issues = "https://github.com/yourusername/gitblame-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitblame_ai*"]
